# sshnet-share

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: release.yml
docs/: dev-start.md  file-navigation.md  package-build.md  release.md  smoke-test.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  floating.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  app_events.rs  commands.rs  credentials.rs  diagnostics.rs  environment.rs  floating.rs  known_hosts.rs  known_hosts_helpers.rs  log_commands.rs  logs.rs  main.rs  paths_ssh_config.rs  profiles.rs  proxy.rs  ssh_auth.rs  startup.rs  tests.rs  tray.rs  tunnel.rs  tunnel_output.rs  tunnel_reconnect.rs
src/features/app/: AppView.tsx
src/features/connections/: ConnectionDetailsPanel.tsx
src/features/editor/: EditorPanel.tsx
src/features/floating/: FloatingView.tsx
src/features/logViewer/: LogControls.tsx  LogPage.tsx
src/hooks/: useAppController.ts  useAppEvents.ts  useAppLogs.ts  useAppUpdates.ts  useDiagnosticBundle.ts  useFloatingController.ts  useKnownHostsController.ts  useSshPasswordPrompt.ts
src/i18n/: localeText.ts
src/lib/: appInfo.ts  appSettings.ts  display.ts  profile.ts  sshPreview.ts
src/styles/: base.css  connections.css  controls.css  editor.css  floating.css  layout.css  logs.css  modal.css  profiles.css  settings.css  theme-light.css
src/types/: domain.ts
tests/e2e/: app.spec.ts
(+2 files in other folders)
